--- a/public/about.html
+++ b/public/about.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
-
+	
 </head>
 
 <body class="body__wrapper">
@@ -67,10 +67,10 @@
                                         <i class="icofont-rounded-down"></i>
                                     </a>
                                             <ul class="headerarea__submenu">
-                                                <li><a href="blog-details.html">Blog1</a></li>
-                                                <li><a href="blog-details.html">Blog2</a></li>
-                                                <li><a href="blog-details.html">Blog3</a></li>
-                                                <li><a href="blog-details.html">Blog4</a></li>
+                                                <li><a href="blog-details.html">Securing Your Data</a></li>
+                                                <li><a href="blog-details-2.html">Mitigating Cyber Risks</a></li>
+                                                <li><a href="blog-details-3.html">Balancing Act</a></li>
+                                                <li><a href="blog-details-4.html">Fortifying the Digital Fortress</a></li>
                                             </ul>
                                         </li>
 
@@ -143,10 +143,10 @@
 
                                 <li class="menu-item-has-children"><a href="blog.html">blog</a>
                                     <ul class="dropdown">
-                                        <li><a href="blog-details.html">Blog1</a></li>
-                                        <li><a href="blog-details.html">Blog2</a></li>
-                                        <li><a href="blog-details.html">Blog3</a></li>
-                                        <li><a href="blog-details.html">Blog4</a></li>
+                                        <li><a href="blog-details.html">Securing Your Data</a></li>
+                                        <li><a href="blog-details-2.html">Mitigating Cyber Risks</a></li>
+                                        <li><a href="blog-details-3.html">Balancing Act</a></li>
+                                        <li><a href="blog-details-4.html">Fortifying the Digital Fortress</a></li>
                                     </ul>
                                 </li>
 
@@ -225,7 +225,7 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6" data-aos="fade-up">
                         <div class="aboutarea__5__img" data-tilt>
-                            <img src="img/about/about_14.png" alt="about">
+                            <img src="img/about/About.jpg" alt="about" width="565" height="575">
                         </div>
                     </div>
 
