--- a/public/blog-details-2.html
+++ b/public/blog-details-2.html
@@ -226,46 +226,76 @@
                     <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
                         <div class="blog__details__content__wraper">
                             <div class="blog__details__img" data-aos="fade-up">
-                                <img src="img/blog/Encryption_Security.jpg" alt="blog" width="850" height ="430">
+                                <img src="img/blog/Malware_Analysis.webp" alt="blog" width="850" height="430">
                             </div>
                             <div class="blog__details__content">
-                                <p class="content__1" data-aos="fade-up">In the digital age, data has become one of the most valuable assets. As a result,
+                                <p class="content__1" data-aos="fade-up">As e-learning platforms continue to grow in popularity, so does the risk of cyber threats. 
                                 </p>
-                                <p class="content__2" data-aos="fade-up">securing this data has become a top priority for organizations.
-								Two key components of data security are data encryption and security architecture.
+                                <p class="content__2" data-aos="fade-up">In the ever-evolving landscape of cybersecurity, two concepts stand out for their importance: 
+								risk management and malware analysis.
                                 </p>
                                 <div class="blog__details__heading" data-aos="fade-up">
-                                    <h5>Data Encryption: The First Line of Defense</h5>
+                                    <h5>Risk Management: A Proactive Approach to Cybersecurity</h5>
                                 </div>
-                                <p class="content__3" data-aos="fade-up">Data encryption is a method of converting data into a code to prevent unauthorized access. It is one of the most effective ways to achieve data security. </p>
-                                <p class="content__4" data-aos="fade-up">To read an encrypted file, you must have access to a secret key or password that enables you to decrypt it. This makes it a powerful tool in the fight against cybercrime.
+                                <p class="content__3" data-aos="fade-up">Risk management involves identifying, assessing, and controlling threats to an organization's digital assets.</p>
+                                <p class="content__4" data-aos="fade-up">These threats could be anything from cyberattacks, data breaches, to insider threats. In the context of cybersecurity, risk management is a proactive approach to securing digital assets.
                                 </p>
-                                <p class="content__5" data-aos="fade-up">There are various types of data encryption, including symmetric key encryption where the same key is used to encrypt and decrypt the data, and asymmetric encryption where two different keys are used - a public key to encrypt the data and a private key to decrypt it.</p>
-                                <div class="blockquate__wraper" data-aos="fade-up">
-                                    <div class="blockquate__content">
-                                        <h3>People often represent the weakest link in the security chain and are chronically responsible for the failure of security systems</h3>
-                                        <a href="https://www.google.com/search?q=Bruce+Schneier">Bruce Schneier</a>
+                                <p class="content__5" data-aos="fade-up">Effective risk management involves several key steps. First, potential threats and vulnerabilities are identified.
+								Next, these threats are assessed based on their potential impact and the likelihood of their occurrence. Finally, appropriate controls are put in place to mitigate these risks.</p>
+
+                                <div class="blog__details__heading" data-aos="fade-up">
+                                    <h5>Malware Analysis: Understanding the Enemy</h5>
+                                </div>
+
+                                <p class="content__6" data-aos="fade-up">Malware analysis is the process of understanding the behavior and purpose of a suspicious file or email that could potentially harm a computer. It involves dissecting malware to understand how it operates, how to protect against it, and how to remove it.</p>
+                                <p class="content__7" data-aos="fade-up">There are two main types of malware analysis: static and dynamic. Static analysis involves examining the malware without executing it, 
+								while dynamic analysis involves observing the malware while it's running in a controlled environment.</p>
+                                <div class="row blog__details__margin">
+                                    <div class="col-xl-4 col-lg-4 col-md-4" data-aos="fade-up">
+                                        <div class="blog__details__img__2">
+                                            <img src="img/blog/Risk_Management.png" alt="blog" width="264" height="352">
+                                            <div class="registerarea__content course__details__video">
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="col-xl-8 col-lg-8 col-md-8">
+                                        <div class="blog__details__heading__2" data-aos="fade-up">
+                                            <h5>Why Risk Management Is Important?</h5>
+                                        </div>
+                                        <div class="aboutarea__list__2 blog__details__list__2" data-aos="fade-up">
+                                            <ul>
+                                                <li>
+                                                    <i class="icofont-check"></i>
+                                                    <p>Proactive Defense: Identifies and addresses threats before they cause harm.</p>
+                                                </li>
+                                                <li>
+                                                    <i class="icofont-check"></i>
+                                                    <p>Efficient Use of Resources: Prioritizes efforts on high-risk vulnerabilities.</p>
+                                                </li>
+                                                <li>
+                                                    <i class="icofont-check"></i>
+                                                    <p>Regulatory Compliance: Helps meet industry-specific cybersecurity regulations.</p>
+                                                </li>
+                                                <li>
+                                                    <i class="icofont-check"></i>
+                                                    <p>Trust Building: Enhances reputation by demonstrating robust security measures.</p>
+                                                </li>
 
+                                            </ul>
+                                        </div>
+
+                                    </div>
                                 </div>
-
-
-                                <div class="blog__details__heading" data-aos="fade-up">
-                                    <h5>Security Architecture: The Blueprint of Data Security</h5>
-                                </div>
-
-                                <p class="content__6" data-aos="fade-up"> Security architecture is a detailed view of the various security measures and technologies within an organization. 
-								It provides a blueprint for securing data and information systems by specifying when and where to apply security controls.</p>
-                                <p class="content__7" data-aos="fade-up">A well-designed security architecture helps organizations protect their data from various threats, including cyberattacks,
-								data breaches, and insider threats. It also helps in maintaining data integrity, confidentiality, and availability.</p>
 
                                 <div class="blog__details__heading__2" data-aos="fade-up">
-                                    <h5>The Future of Data Encryption and Security Architecture</h5>
+                                    <h5>The Future of Risk Management and Malware Analysis</h5>
                                 </div>
-                                <p class="content__8" data-aos="fade-up">As cyber threats continue to evolve, so too will data encryption and security architecture. 
-								We can expect to see more advanced encryption algorithms and more comprehensive and dynamic security architectures.</p>
-                                <p class="content__9" data-aos="fade-up">In conclusion, data encryption and security architecture play a crucial role in protecting an organization's data. 
-								By understanding and implementing these concepts, organizations can significantly enhance their data security and mitigate the risk of cyber threats.</p>
+                                <p class="content__8" data-aos="fade-up">As cyber threats continue to evolve, so too will the fields of risk management and malware analysis. We can expect to see more advanced risk assessment tools and more sophisticated malware analysis techniques.
+                                </p>
+                                <p class="content__9" data-aos="fade-up">
+                                    In conclusion, risk management and malware analysis are crucial components of a robust cybersecurity strategy. By understanding and implementing these concepts,
+									organizations can better protect their digital assets and mitigate the risk of cyber threats.
+                                </p>
 
                             </div>
                             <div class="blog__details__tag" data-aos="fade-up">
@@ -274,19 +304,16 @@
                                         Tag
                                     </li>
                                     <li>
-                                        <a href="#">Data Encryption</a>
+                                        <a href="#">Risk Management</a>
                                     </li>
                                     <li>
-                                        <a href="#">Security</a>
+                                        <a href="#">Malware Analysis</a>
                                     </li>
                                     <li>
-                                        <a href="#">Hashing</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Data</a>
+                                        <a href="#">Defense</a>
                                     </li>
 									<li>
-                                        <a href="#">Password</a>
+                                        <a href="#">Threat</a>
                                     </li>
                                 </ul>
                                 <ul class="share__list" data-aos="fade-up">
@@ -348,11 +375,10 @@
                             <h4 class="sidebar__title">Tag</h4>
                             <div class="populer__tag__list">
                                 <ul>
-                                    <li><a href="#">Data Encryption</a></li>
-                                    <li><a href="#">Security Architecture</a></li>
-                                    <li><a href="#">Hashing</a></li>
-                                    <li><a href="#">Data</a></li>
-                                    <li><a href="#">Password</a></li>
+                                    <li><a href="#">Risk Management</a></li>
+                                    <li><a href="#">Malware Analysis</a></li>
+                                    <li><a href="#">Defense</a></li>
+                                    <li><a href="#">Threat</a></li>
                                 </ul>
                             </div>
 
