--- a/public/blog-details-3.html
+++ b/public/blog-details-3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Page not found | E-learning Security</title>
+    <title>Authentication | E-learning Security</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -185,30 +185,201 @@
         </div>
         <!-- theme fixed shadow -->
 
-<!-- error__section__start -->
-        <div class="errorarea sp_top_100 sp_bottom_100">
+<!-- breadcrumbarea__section__start -->
+
+        <div class="breadcrumbarea">
+
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-8 col-lg-10 col-sm-12 col-12 m-auto">
-                        <div class="errorarea__inner" data-aos="fade-up">
-                            <div class="error__img">
-                                <img src="img/icon/error__1.png" alt="error">
+                    <div class="col-xl-12">
+                        <div class="breadcrumb__content__wraper" data-aos="fade-up">
+                            <div class="breadcrumb__title">
+                                <h2 class="heading">Blog Details</h2>
                             </div>
-                            <div class="error__text">
-                                <h3>Oops... It looks like you ‘re lost !</h3>
-                                <p>Oops! The page you are looking for does not exist. It might have been moved or deleted</p>
+                            <div class="breadcrumb__inner">
+                                <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li>Blog page</li>
+                                </ul>
                             </div>
-                            <div class="error__button">
-                                <a class="default__button" href="index.html">Back To Home
-                                <i class="icofont-simple-right"></i>
-                            </a>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="shape__icon__2">
+                <img class=" shape__icon__img shape__icon__img__1" src="img/herobanner/herobanner__1.png" alt="photo">
+                <img class=" shape__icon__img shape__icon__img__2" src="img/herobanner/herobanner__2.png" alt="photo">
+                <img class=" shape__icon__img shape__icon__img__3" src="img/herobanner/herobanner__3.png" alt="photo">
+                <img class=" shape__icon__img shape__icon__img__4" src="img/herobanner/herobanner__5.png" alt="photo">
+            </div>
+
+        </div>
+        <!-- breadcrumbarea__section__end-->
+
+        <div class="blogarea__2 sp_top_100 sp_bottom_100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
+                        <div class="blog__details__content__wraper">
+                            <div class="blog__details__img" data-aos="fade-up">
+                                <img src="img/blog/Cyber_Laws.png" alt="blog" width="850" height ="430">
                             </div>
+                            <div class="blog__details__content">
+                                <p class="content__1" data-aos="fade-up">In the realm of cybersecurity, two concepts often intersect: cyber laws and ethical hacking. 
+                                </p>
+                                <p class="content__2" data-aos="fade-up">As technology continues to evolve, so too will the fields of cyber law and ethical hacking.
+								We can expect to see more comprehensive and dynamic cyber laws and more sophisticated ethical hacking techniques.
+                                </p>
+                                <div class="blog__details__heading" data-aos="fade-up">
+                                    <h5>Cyber Laws: The Rulebook for the Digital World</h5>
+                                </div>
+                                <p class="content__3" data-aos="fade-up">Cyber laws, also known as internet laws, are regulations and statutes that govern activities on the internet.</p>
+                                <p class="content__4" data-aos="fade-up">They cover a wide range of areas, including data protection, privacy, intellectual property, and cybercrime. These laws are crucial in maintaining order in the digital world and protecting users from various cyber threats.
+                                </p>
+                                <p class="content__5" data-aos="fade-up">One example of cyber law in action is the General Data Protection Regulation (GDPR) in the European Union, which governs data protection and privacy. It sets strict rules for data handling and imposes heavy penalties for violations.</p>
+                                <div class="blockquate__wraper" data-aos="fade-up">
+                                    <div class="blockquate__content">
+                                        <h3>In the end, my story, in Iraq and afterward, is about more than just killing people or even fighting for my country. It's about being a man. And it's about love as well as hate</h3>
+                                        <a href="https://www.google.com/search?q=Kevin+Mitnick">Kevin Mitnick</a>
+                                    </div>
+
+                                </div>
+
+
+                                <div class="blog__details__heading" data-aos="fade-up">
+                                    <h5>The Interplay Between Cyber Laws and Ethical Hacking</h5>
+                                </div>
+
+                                <p class="content__6" data-aos="fade-up"> Ethical hacking is legal as long as it is done with the owner's permission to find loopholes in the system and offer solutions to improve it. </p>
+                                <p class="content__7" data-aos="fade-up">Cyber laws play a crucial role in defining the boundaries of ethical hacking. They ensure that ethical hackers operate within the confines of the law, preventing potential misuse of information and maintaining the trust of the public.</p>
+
+                                <div class="blog__details__heading__2" data-aos="fade-up">
+                                    <h5>The Future of Cyber Laws and Ethical Hacking</h5>
+                                </div>
+                                <p class="content__8" data-aos="fade-up">In conclusion, cyber laws and ethical hacking play a crucial role in protecting an organization's digital assets. </p>
+                                <p class="content__9" data-aos="fade-up">By understanding and implementing these concepts, 
+								organizations can better protect their digital assets and mitigate the risk of cyber threats.</p>
+
+                            </div>
+                            <div class="blog__details__tag" data-aos="fade-up">
+                                <ul>
+                                    <li class="heading__tag">
+                                        Tag
+                                    </li>
+                                    <li>
+                                        <a href="#">Cyber Laws</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Ethical Hacking</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Privacy</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Cybercrime</a>
+                                    </li>
+                                </ul>
+                                <ul class="share__list" data-aos="fade-up">
+                                    <li class="heading__tag">
+                                        Share
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-twitter"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-facebook"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-instagram"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
+                        <div class="blogsidebar__content__wraper__2" data-aos="fade-up">
+                            <div class="blogsidebar__content__inner__2">
+                                <div class="blogsidebar__img__2">
+                                    <img src="img/blog/PheeHandy.png" alt="blog" width="99" height="99">
+                                </div>
+                                <div class="blogsidebar__name__2">
+                                    <h5>
+                                        <a href="#"> PheeHandy</a>
+
+                                    </h5>
+                                    <p>Blogger/Programmer</p>
+                                </div>
+                                <div class="blog__sidebar__text__2">
+                                    <p>A programmer who is learning to write blog posts</p>
+                                </div>
+                                <div class="blogsidbar__icon__2">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><i class="icofont-facebook"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="icofont-youtube-play"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icofont-instagram"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icofont-twitter"></i></a>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blogsidebar__content__wraper__2" data-aos="fade-up">
+
+                            <h4 class="sidebar__title">Tag</h4>
+                            <div class="populer__tag__list">
+                                <ul>
+                                    <li><a href="#">Cyber Laws</a></li>
+                                    <li><a href="#">Ethical Hacking</a></li>
+                                    <li><a href="#">Privacy</a></li>
+                                    <li><a href="#">Cybercrime</a></li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                        <div class="blogsidebar__content__wraper__2" data-aos="fade-up">
+
+                            <h4 class="sidebar__title">Follow Us</h4>
+                            <div class="follow__icon">
+                                <ul>
+                                    <li>
+                                        <a href="#"><i class="icofont-facebook"></i></a>
+                                    </li>
+
+                                    <li>
+                                        <a href="#"><i class="icofont-youtube-play"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-instagram"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-twitter"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-instagram"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- error__section__end -->
 
         <!-- footer__section__start -->
         <div class="footerarea">
