--- a/public/blog-details-4.html
+++ b/public/blog-details-4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Page not found | E-learning Security</title>
+    <title>Authentication | E-learning Security</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -185,30 +185,196 @@
         </div>
         <!-- theme fixed shadow -->
 
-<!-- error__section__start -->
-        <div class="errorarea sp_top_100 sp_bottom_100">
+<!-- breadcrumbarea__section__start -->
+
+        <div class="breadcrumbarea">
+
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-8 col-lg-10 col-sm-12 col-12 m-auto">
-                        <div class="errorarea__inner" data-aos="fade-up">
-                            <div class="error__img">
-                                <img src="img/icon/error__1.png" alt="error">
+                    <div class="col-xl-12">
+                        <div class="breadcrumb__content__wraper" data-aos="fade-up">
+                            <div class="breadcrumb__title">
+                                <h2 class="heading">Blog Details</h2>
                             </div>
-                            <div class="error__text">
-                                <h3>Oops... It looks like you ‘re lost !</h3>
-                                <p>Oops! The page you are looking for does not exist. It might have been moved or deleted</p>
+                            <div class="breadcrumb__inner">
+                                <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li>Blog page</li>
+                                </ul>
                             </div>
-                            <div class="error__button">
-                                <a class="default__button" href="index.html">Back To Home
-                                <i class="icofont-simple-right"></i>
-                            </a>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="shape__icon__2">
+                <img class=" shape__icon__img shape__icon__img__1" src="img/herobanner/herobanner__1.png" alt="photo">
+                <img class=" shape__icon__img shape__icon__img__2" src="img/herobanner/herobanner__2.png" alt="photo">
+                <img class=" shape__icon__img shape__icon__img__3" src="img/herobanner/herobanner__3.png" alt="photo">
+                <img class=" shape__icon__img shape__icon__img__4" src="img/herobanner/herobanner__5.png" alt="photo">
+            </div>
+
+        </div>
+        <!-- breadcrumbarea__section__end-->
+
+        <div class="blogarea__2 sp_top_100 sp_bottom_100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
+                        <div class="blog__details__content__wraper">
+                            <div class="blog__details__img" data-aos="fade-up">
+                                <img src="img/blog/Incident_Response.png" alt="blog" width="850" height ="430">
                             </div>
+                            <div class="blog__details__content">
+                                <p class="content__1" data-aos="fade-up">The digital world is a battlefield, and in this battlefield, the warriors are network security and incident response. 
+                                </p>
+                                <p class="content__2" data-aos="fade-up">These two elements form the backbone of cybersecurity, 
+								acting as the shield and sword in the fight against cyber threats.</p>
+                                <div class="blog__details__heading" data-aos="fade-up">
+                                    <h5>Network Security: The Digital Shield</h5>
+                                </div>
+                                <p class="content__3" data-aos="fade-up">Network security is akin to a shield, protecting the integrity and usability of a network and its data. It employs a combination of hardware and software technologies, </p>
+                                <p class="content__4" data-aos="fade-up">all aimed at warding off a variety of threats and preventing them from infiltrating or spreading on the network.
+                                </p>
+                                <p class="content__5" data-aos="fade-up">One example of network security in action is the use of firewalls and antivirus software to protect against potential cyber threats.
+								These tools help identify and block potential threats, thus mitigating the risk they pose.</p>
+
+                                <div class="blog__details__heading" data-aos="fade-up">
+                                    <h5>Incident Response: The Digital Sword</h5>
+                                </div>
+
+                                <p class="content__6" data-aos="fade-up"> Incident response is the sword that strikes back when a breach or attack occurs. 
+								It is the process by which an organization responds to a data breach or cyberattack,</p>
+                                <p class="content__7" data-aos="fade-up">with the aim to swiftly identify the attack, minimize its impact, 
+								contain the damage, and rectify the cause to lessen the risk of future incidents.</p>
+
+                                <div class="blog__details__heading__2" data-aos="fade-up">
+                                    <h5>The Future of Network Security and Incident Response</h5>
+                                </div>
+                                <p class="content__8" data-aos="fade-up">As technology continues to evolve, so too will the fields of network security and incident response. 
+								We can expect to see more advanced network security tools and more sophisticated incident response techniques.</p>
+                                <p class="content__9" data-aos="fade-up">In conclusion, network security and incident response play a crucial role in protecting an organization's digital assets. By understanding and implementing these concepts,
+								organizations can better protect their digital assets and mitigate the risk of cyber threats.</p>
+
+                            </div>
+                            <div class="blog__details__tag" data-aos="fade-up">
+                                <ul>
+                                    <li class="heading__tag">
+                                        Tag
+                                    </li>
+                                    <li>
+                                        <a href="#">Network Security</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Incident Response</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Threat</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Data</a>
+                                    </li>
+                                </ul>
+                                <ul class="share__list" data-aos="fade-up">
+                                    <li class="heading__tag">
+                                        Share
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-twitter"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-facebook"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-instagram"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
+                        <div class="blogsidebar__content__wraper__2" data-aos="fade-up">
+                            <div class="blogsidebar__content__inner__2">
+                                <div class="blogsidebar__img__2">
+                                    <img src="img/blog/PheeHandy.png" alt="blog" width="99" height="99">
+                                </div>
+                                <div class="blogsidebar__name__2">
+                                    <h5>
+                                        <a href="#"> PheeHandy</a>
+
+                                    </h5>
+                                    <p>Blogger/Programmer</p>
+                                </div>
+                                <div class="blog__sidebar__text__2">
+                                    <p>A programmer who is learning to write blog posts</p>
+                                </div>
+                                <div class="blogsidbar__icon__2">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><i class="icofont-facebook"></i></a>
+                                        </li>
+
+                                        <li>
+                                            <a href="#"><i class="icofont-youtube-play"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icofont-instagram"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icofont-twitter"></i></a>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blogsidebar__content__wraper__2" data-aos="fade-up">
+
+                            <h4 class="sidebar__title">Tag</h4>
+                            <div class="populer__tag__list">
+                                <ul>
+                                    <li><a href="#">Network Security</a></li>
+                                    <li><a href="#">Incident Response</a></li>
+                                    <li><a href="#">Threat</a></li>
+                                    <li><a href="#">Data</a></li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                        <div class="blogsidebar__content__wraper__2" data-aos="fade-up">
+
+                            <h4 class="sidebar__title">Follow Us</h4>
+                            <div class="follow__icon">
+                                <ul>
+                                    <li>
+                                        <a href="#"><i class="icofont-facebook"></i></a>
+                                    </li>
+
+                                    <li>
+                                        <a href="#"><i class="icofont-youtube-play"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-instagram"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-twitter"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icofont-instagram"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- error__section__end -->
 
         <!-- footer__section__start -->
         <div class="footerarea">
