--- a/public/index.html
+++ b/public/index.html
@@ -67,10 +67,10 @@
                                         <i class="icofont-rounded-down"></i>
                                     </a>
                                             <ul class="headerarea__submenu">
-                                                <li><a href="blog-details.html">Blog1</a></li>
-                                                <li><a href="blog-details.html">Blog2</a></li>
-                                                <li><a href="blog-details.html">Blog3</a></li>
-                                                <li><a href="blog-details.html">Blog4</a></li>
+                                                <li><a href="blog-details.html">Securing Your Data</a></li>
+                                                <li><a href="blog-details-2.html">Mitigating Cyber Risks</a></li>
+                                                <li><a href="blog-details-3.html">Balancing Act</a></li>
+                                                <li><a href="blog-details-4.html">Fortifying the Digital Fortress</a></li>
                                             </ul>
                                         </li>
 
@@ -143,10 +143,10 @@
 
                                 <li class="menu-item-has-children"><a href="blog.html">blog</a>
                                     <ul class="dropdown">
-                                        <li><a href="blog-details.html">Blog1</a></li>
-                                        <li><a href="blog-details.html">Blog2</a></li>
-                                        <li><a href="blog-details.html">Blog3</a></li>
-                                        <li><a href="blog-details.html">Blog4</a></li>
+                                        <li><a href="blog-details.html">Securing Your Data</a></li>
+                                        <li><a href="blog-details-2.html">Mitigating Cyber Risks</a></li>
+                                        <li><a href="blog-details-3.html">Balancing Act</a></li>
+                                        <li><a href="blog-details-4.html">Fortifying the Digital Fortress</a></li>
                                     </ul>
                                 </li>
 
@@ -193,7 +193,7 @@
                         <div class="aboutarea__img__inner text-center">
                             <div class="aboutarea__img" data-tilt>
                                 <img class="aboutimg__1" src="img/about/about_8.png" alt="aboutimg">
-                                <img class="aboutimg__2" src="img/about/about_1.png" alt="aboutimg">
+                                <img class="aboutimg__2" src="img/about/Index.jpg" alt="aboutimg" width="435" height ="515">
                             </div>
                         </div>
 
