--- a/public/authentication.html
+++ b/public/authentication.html
@@ -67,10 +67,10 @@
                                         <i class="icofont-rounded-down"></i>
                                     </a>
                                             <ul class="headerarea__submenu">
-                                                <li><a href="blog-details.html">Blog1</a></li>
-                                                <li><a href="blog-details.html">Blog2</a></li>
-                                                <li><a href="blog-details.html">Blog3</a></li>
-                                                <li><a href="blog-details.html">Blog4</a></li>
+                                                <li><a href="blog-details.html">Securing Your Data</a></li>
+                                                <li><a href="blog-details-2.html">Mitigating Cyber Risks</a></li>
+                                                <li><a href="blog-details-3.html">Balancing Act</a></li>
+                                                <li><a href="blog-details-4.html">Fortifying the Digital Fortress</a></li>
                                             </ul>
                                         </li>
 
@@ -107,7 +107,7 @@
                             <div class="header-right-wrap">
 
                                 <div class="mobile-off-canvas">
-                                    <a class="mobile-aside-button" href="#"><i class="icofont-navigation-menu"></i></a>
+                                    <a class="mobile-aside-button" href="index.html"><i class="icofont-navigation-menu"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -143,10 +143,10 @@
 
                                 <li class="menu-item-has-children"><a href="blog.html">blog</a>
                                     <ul class="dropdown">
-                                        <li><a href="blog-details.html">Blog1</a></li>
-                                        <li><a href="blog-details.html">Blog2</a></li>
-                                        <li><a href="blog-details.html">Blog3</a></li>
-                                        <li><a href="blog-details.html">Blog4</a></li>
+                                        <li><a href="blog-details.html">Securing Your Data</a></li>
+                                        <li><a href="blog-details-2.html">Mitigating Cyber Risks</a></li>
+                                        <li><a href="blog-details-3.html">Balancing Act</a></li>
+                                        <li><a href="blog-details-4.html">Fortifying the Digital Fortress</a></li>
                                     </ul>
                                 </li>
 
