--- a/public/contact.html
+++ b/public/contact.html
@@ -67,10 +67,10 @@
                                         <i class="icofont-rounded-down"></i>
                                     </a>
                                             <ul class="headerarea__submenu">
-                                                <li><a href="blog-details.html">Blog1</a></li>
-                                                <li><a href="blog-details.html">Blog2</a></li>
-                                                <li><a href="blog-details.html">Blog3</a></li>
-                                                <li><a href="blog-details.html">Blog4</a></li>
+                                                <li><a href="blog-details.html">Securing Your Data</a></li>
+                                                <li><a href="blog-details-2.html">Mitigating Cyber Risks</a></li>
+                                                <li><a href="blog-details-3.html">Balancing Act</a></li>
+                                                <li><a href="blog-details-4.html">Fortifying the Digital Fortress</a></li>
                                             </ul>
                                         </li>
 
@@ -100,7 +100,7 @@
                     <div class="row align-items-center">
                         <div class="col-6">
                             <div class="mobile-logo">
-                                <a class="logo__dark" href="#"><img src="img/logo/logo.png" alt="logo"></a>
+                                <a class="logo__dark" href="index.html"><img src="img/logo/logo.png" alt="logo"></a>
                             </div>
                         </div>
                         <div class="col-6">
@@ -143,10 +143,10 @@
 
                                 <li class="menu-item-has-children"><a href="blog.html">blog</a>
                                     <ul class="dropdown">
-                                        <li><a href="blog-details.html">Blog1</a></li>
-                                        <li><a href="blog-details.html">Blog2</a></li>
-                                        <li><a href="blog-details.html">Blog3</a></li>
-                                        <li><a href="blog-details.html">Blog4</a></li>
+                                        <li><a href="blog-details.html">Securing Your Data</a></li>
+                                        <li><a href="blog-details-2.html">Mitigating Cyber Risks</a></li>
+                                        <li><a href="blog-details-3.html">Balancing Act</a></li>
+                                        <li><a href="blog-details-4.html">Fortifying the Digital Fortress</a></li>
                                     </ul>
                                 </li>
 
